--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
  @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap');
 
  body{
-  color: #6d6d6d;
+  color: black ; /* o en su defecto #6d6d6d*/
   background-color: white
   ;
  }
@@ -90,7 +90,7 @@ body {
 
 
 
-nav ul {
+.nav-header, .ul-header {
   display: flex;
   align-items: center;
   margin: 0;
@@ -98,8 +98,8 @@ nav ul {
 }
 
 li {
-  margin: 0px;
   list-style: none;
+  padding-bottom: 1rem;
 }
 
 
@@ -138,5 +138,82 @@ justify-content: center ;
 width: 100vw;
 box-sizing: border-box;
 padding-top: 3rem;
+
+}
+
+.Que {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #b8f0ed;
+
+}
+
+.Que1{
+  font-size: 3rem;
+}
+
+.Que2{
+  font-size: 1.25rem;
+}
+
+.Que1, .Que2{
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  margin: auto 3rem;
+  }
+
+.Servicios, .Servicios > p{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between ;
+  background-color: #fcffff  ;
+
+}
+
+.Servicios-1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 80vw;
+}
+
+.linea1, .linea2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.linea1{
+  margin-bottom: -4rem;
+}
+.linea1 > p, .linea2 > p {
+  border-radius: 50%;
+  background-color: #f1dec3;
+  font-size: 0.9rem;
+  height: 8rem;
+  width: 8rem;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  font-weight: 700;
+
+
+}
+.Servicio-destacado{
+  height: 11rem !important;
+  width: 11rem !important;
+  font-size: 1.2rem !important;
+  background-color: black !important;
+  color: #b8f0ed !important;
+}
+
+h1{
+  padding: 2rem 0 0 2rem;
 
 }
